fix: update overlay background color for improved visibility and consistency

--- a/css/templatestyles.css
+++ b/css/templatestyles.css
@@ -181,7 +181,7 @@ hr{border:1.5px solid #bc5a15;margin:5px 30px -5px 30px}
 }
 .big-image.foundation{background-image:url(../images/566/foundation.webp);}
 
-.overlay{position:relative;left:50%;background:rgba(48,63,94,.41);color:white;width:90%;text-align:center;top:50%;transform:translate(-50%,calc(-50% - 30px));padding:12px}
+.overlay{position:relative;left:50%;background-color: #0000006e;color:white;width:90%;text-align:center;top:50%;transform:translate(-50%,calc(-50% - 30px));padding:12px}
 #hero-h1{text-align:left;font-size:35px;text-shadow:2px 2px 4px #000;line-height:39px;}
 #hero-hr{margin:17px 3px;}
 #hero-p{padding:0;font-size:18px;font-weight:bold;text-shadow:2px 2px 4px #000;text-align:left;}
